--- a/gb/21/3/17/n12816931.md
+++ b/gb/21/3/17/n12816931.md
@@ -1,61 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>响应麦当劳叔叔 一起洗手趣预防肠病毒</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/03/488460-600x400.jpg" />
 <h6>	参与活动人员与幸福幼儿园小朋友大合照。（李撷璎／大纪元）
 </h6>
 <hr>
-<p>【大纪元2021年03月17日讯】（大纪元记者李撷璎台湾嘉义报导）在各项疾病威胁人类的同时，采取超前部署、未雨绸缪的方式可预防许多不应该发生的、甚至失控的局面。目前<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%82%A0%E7%97%85%E6%AF%92.md#1">肠病毒</a>并没有疫苗或特效药，且酒精性干<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B4%97%E6%89%8B.md#1">洗手</a>对肠病毒是无效的，只有以下的勤洗手是最好的预防肠病毒的良方。</p>
-<figure id="12816934" aria-describedby="caption-12816934" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/03/488461-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/03/488461-450x300.jpg" alt=" 幸福幼儿园小朋友认真参与本次活动。" width="601" b="400" /></a><figcaption id="caption-12816934" class="wp-caption-text">幸福幼儿园小朋友认真参与本次活动。（李撷璎／大纪元）</figcaption></figure>
-<p>嘉义巿政府卫生局与麦当劳叔叔之家慈善基金会携手合作，于17日办理“一起<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B4%97%E6%89%8B.md#1">洗手</a>趣，预防<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%82%A0%E7%97%85%E6%AF%92.md#1">肠病毒</a>”打击肠病毒校园宣导活动。由麦当劳叔叔和副巿长陈淑慧及幸福幼儿园园长李鹂珍等人一起亲自示范正确洗手五步骤（湿、搓、冲、捧、擦）、洗手七字诀（内、外、夹、弓、大、立、腕）及洗手五时机（吃东西前、接触幼儿前、上厕所后、擤鼻涕后及看病前后）行动剧，以生动活泼、寓教于乐的方式，加强学童洗手意愿及正确洗手的观念。</p>
-<figure id="12816935" aria-describedby="caption-12816935" style="width: 599px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/03/488462-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/03/488462-450x300.jpg" alt=" 副市长陈淑慧亲自示范正确洗手五步骤(湿、搓、冲、捧、擦)。" width="599" b="399" /></a><figcaption id="caption-12816935" class="wp-caption-text">副市长陈淑慧亲自示范正确洗手五步骤(湿、搓、冲、捧、擦)。（李撷璎／大纪元）</figcaption></figure>
+<p>【大纪元2021年03月17日讯】（大纪元记者李撷璎台湾嘉义报导）在各项疾病威胁人类的同时，采取超前部署、未雨绸缪的方式可预防许多不应该发生的、甚至失控的局面。目前肠病毒并没有疫苗或特效药，且酒精性干洗手对肠病毒是无效的，只有以下的勤洗手是最好的预防肠病毒的良方。</p>
+<figure id="12816934" aria-describedby="caption-12816934" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/03/488461-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2021/03/488461-450x300.jpg" alt=" 幸福幼儿园小朋友认真参与本次活动。" width="601" b="400" /></a><figcaption id="caption-12816934" class="wp-caption-text">幸福幼儿园小朋友认真参与本次活动。（李撷璎／大纪元）</figcaption></figure>
+<p>嘉义巿政府卫生局与麦当劳叔叔之家慈善基金会携手合作，于17日办理“一起洗手趣，预防肠病毒”打击肠病毒校园宣导活动。由麦当劳叔叔和副巿长陈淑慧及幸福幼儿园园长李鹂珍等人一起亲自示范正确洗手五步骤（湿、搓、冲、捧、擦）、洗手七字诀（内、外、夹、弓、大、立、腕）及洗手五时机（吃东西前、接触幼儿前、上厕所后、擤鼻涕后及看病前后）行动剧，以生动活泼、寓教于乐的方式，加强学童洗手意愿及正确洗手的观念。</p>
+<figure id="12816935" aria-describedby="caption-12816935" style="width: 599px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/03/488462-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2021/03/488462-450x300.jpg" alt=" 副市长陈淑慧亲自示范正确洗手五步骤(湿、搓、冲、捧、擦)。" width="599" b="399" /></a><figcaption id="caption-12816935" class="wp-caption-text">副市长陈淑慧亲自示范正确洗手五步骤(湿、搓、冲、捧、擦)。（李撷璎／大纪元）</figcaption></figure>
 <p>嘉义市副市长陈淑慧代表市长黄敏惠出席活动时表示，依往例，在肠病毒流行期前夕请到麦当劳叔叔来教导小朋友学习洗手，共同对抗肠病毒；去年我们将肠病毒防治工作做得很好，今年也同样期待肠病毒不会发生，呼吁大家做好洗手五步骤、七字诀及五时机，养成个人卫生习惯及环境清洁，这对于防治肠病毒非常重要；从孩子养成良好卫生习惯，然后影响家人、邻里到城市，大家共同为肠病毒防治工作，作好最万全准备。</p>
-<figure id="12816936" aria-describedby="caption-12816936" style="width: 599px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/03/488463-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/03/488463-450x300.jpg" alt=" 麦当劳叔叔与台上小朋友及洗手团队共同复习洗手七字诀(内、外、夹、弓、大、立、腕)及洗手五时机(吃东西前、接触幼儿前、上厕所后、擤鼻涕后及看病前后)。" width="599" b="399" /></a><figcaption id="caption-12816936" class="wp-caption-text">麦当劳叔叔与台上小朋友及洗手团队共同复习洗手七字诀(内、外、夹、弓、大、立、腕)及洗手五时机(吃东西前、接触幼儿前、上厕所后、擤鼻涕后及看病前后)。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12816936" aria-describedby="caption-12816936" style="width: 599px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/03/488463-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2021/03/488463-450x300.jpg" alt=" 麦当劳叔叔与台上小朋友及洗手团队共同复习洗手七字诀(内、外、夹、弓、大、立、腕)及洗手五时机(吃东西前、接触幼儿前、上厕所后、擤鼻涕后及看病前后)。" width="599" b="399" /></a><figcaption id="caption-12816936" class="wp-caption-text">麦当劳叔叔与台上小朋友及洗手团队共同复习洗手七字诀(内、外、夹、弓、大、立、腕)及洗手五时机(吃东西前、接触幼儿前、上厕所后、擤鼻涕后及看病前后)。（李撷璎／大纪元）</figcaption></figure>
 <p>市府卫生局表示，肠病毒传染力强，除了幼儿之外，青少年甚至是成人都有感染肠病毒的可能，只是大多症状较轻微，与感冒不易区分，最有效的预防方法为正确勤洗手。去（2020）年起因中共病毒(武汉肺炎)防疫，民众戴口罩、勤洗手，肠病毒疫情降温，2021年截至目前全国皆没有重症病例；目前社区肠病毒检出以克沙奇A群为多，但仍有肠病毒71型活动，即容易有导致重症的风险，特别是在人与人密切接触、互动频繁的校园最容易传播。</p>
-<figure id="12816937" aria-describedby="caption-12816937" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/03/488464-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/03/488464-450x300.jpg" alt=" 卫生局副局长廖育玮出题目给小朋友做有奖征答。" width="601" b="400" /></a><figcaption id="caption-12816937" class="wp-caption-text">卫生局副局长廖育玮出题目给小朋友做有奖征答。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12816937" aria-describedby="caption-12816937" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/03/488464-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2021/03/488464-450x300.jpg" alt=" 卫生局副局长廖育玮出题目给小朋友做有奖征答。" width="601" b="400" /></a><figcaption id="caption-12816937" class="wp-caption-text">卫生局副局长廖育玮出题目给小朋友做有奖征答。（李撷璎／大纪元）</figcaption></figure>
 <p>感染肠病毒痊愈后，仅对此次感染的型别产生免疫，且大人也会感染肠病毒，因此，最好的预防方法是大人小孩都要用肥皂勤洗手、注意个人卫生。也请不要用手指接触口鼻黏膜，必须使用卫生纸或衣袖（手背），可以大幅降低感染的概率。目前肠病毒并没有疫苗或特效药，且酒精性干洗手对肠病毒是无效的，建议可用500ppm含氯漂白水（市售家用含氯漂白水100c.c.，加入10公升的清水）擦拭地板、玩具、门把及扶梯等，可有效防止受到肠病毒感染。</p>
-<figure id="12816938" aria-describedby="caption-12816938" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/03/488465-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/03/488465-450x300.jpg" alt=" 副市长陈淑慧发给参加有奖征答小朋友奖品。" width="601" b="400" /></a><figcaption id="caption-12816938" class="wp-caption-text">副市长陈淑慧发给参加有奖征答小朋友奖品。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12816938" aria-describedby="caption-12816938" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/03/488465-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2021/03/488465-450x300.jpg" alt=" 副市长陈淑慧发给参加有奖征答小朋友奖品。" width="601" b="400" /></a><figcaption id="caption-12816938" class="wp-caption-text">副市长陈淑慧发给参加有奖征答小朋友奖品。（李撷璎／大纪元）</figcaption></figure>
 <p>市府卫生局说，为防范肠病毒疫情，将于流行季前完成辖内91家幼教托育机构肠病毒防治查核作业。另外也提醒家长，若孩童感染肠病毒，务必留意其病情变化及肠病毒感染并发重症前兆（嗜睡、肌跃型抽搐、持续性呕吐、呼吸急促或心跳加快），掌握黄金治疗时间，尽速至大医院就医。民众如有疑问，可参阅疾管署全球资讯网<ahref="http://www.cdc.gov.tw" target="_blank" rel="noopener noreferrer">（http://www.cdc.gov.tw</a>）或拨打疫情通报及咨询专线1922、2341150洽询。</p>
-<figure id="12816940" aria-describedby="caption-12816940" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/03/488466-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/03/488466-450x300.jpg" alt=" 麦当劳叔叔持续进行有奖征答。" width="601" b="400" /></a><figcaption id="caption-12816940" class="wp-caption-text">麦当劳叔叔持续进行有奖征答。（李撷璎／大纪元）</figcaption></figure>
-<figure id="12816941" aria-describedby="caption-12816941" style="width: 619px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/03/488467-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/03/488467-450x300.jpg" alt=" 副市长陈淑慧持续发给参加有奖征答小朋友奖品。" width="619" b="412" /></a><figcaption id="caption-12816941" class="wp-caption-text">副市长陈淑慧持续发给参加有奖征答小朋友奖品。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12816940" aria-describedby="caption-12816940" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/03/488466-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2021/03/488466-450x300.jpg" alt=" 麦当劳叔叔持续进行有奖征答。" width="601" b="400" /></a><figcaption id="caption-12816940" class="wp-caption-text">麦当劳叔叔持续进行有奖征答。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12816941" aria-describedby="caption-12816941" style="width: 619px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/03/488467-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2021/03/488467-450x300.jpg" alt=" 副市长陈淑慧持续发给参加有奖征答小朋友奖品。" width="619" b="412" /></a><figcaption id="caption-12816941" class="wp-caption-text">副市长陈淑慧持续发给参加有奖征答小朋友奖品。（李撷璎／大纪元）</figcaption></figure>
 <p>责任编辑：唐音</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/10/n11580257.md#1">防范肠病毒“大家一起洗手趣”校园宣导</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/9/9/n12391231.md#1">跟麦当劳叔叔洗手同乐 肠病毒远离我</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/10/7/n12458973.md#1">桃园B、C型肝炎筛检服务  乐洗手愿离肠病毒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/11/19/n12560560.md#1">儿童常见出疹性疾病--认识肠病毒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/2/20/n12763937.md#1">桃园校园环境大消毒完成 各校严谨防疫迎开学</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/3/4/n12788286.md#1">桃园肠病毒71型活动  重症前兆病征手部卫生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/3/10/n12801699.md#1">龙潭首例肠病毒轻症个案确诊 注意饮食卫生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/31/n14215307.md#1">云林童乐嘉年华会 吸引约5万人次进场游乐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/31/n14215265.md#1">崙背唯一的历史建筑-分驻所日式宿舍 将于6月修复完工　</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/31/n14215099.md#1">嘉义市关灯1小时 以行动响应节能</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/10/n11580257.md#1">防范肠病毒“大家一起洗手趣”校园宣导</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/9/9/n12391231.md#1">跟麦当劳叔叔洗手同乐 肠病毒远离我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/10/7/n12458973.md#1">桃园B、C型肝炎筛检服务  乐洗手愿离肠病毒</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/11/19/n12560560.md#1">儿童常见出疹性疾病--认识肠病毒</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/20/n12763937.md#1">桃园校园环境大消毒完成 各校严谨防疫迎开学</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/4/n12788286.md#1">桃园肠病毒71型活动  重症前兆病征手部卫生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/10/n12801699.md#1">龙潭首例肠病毒轻症个案确诊 注意饮食卫生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308165.md#1">嘉义市荣获 台湾永续行动奖 一金二银二铜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308120.md#1">嘉大师范学院学生  赴日教学实习受益良多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308125.md#1">工程会南下关心云林凯米灾损 助地方尽早复建</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/22/n10326635.md#1" target="_blank">杨宁：“四二五”政治构陷 江派黑手待拿下</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/12/n11252250.md#1" target="_blank">大陆公安 从参与迫害到修炼法轮功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/6/n11704921.md#1" target="_blank">启明：共产党注定灭亡</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/10/21/n4555095.md#1" target="_blank">这条命是法轮功给的</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/11/n14199588.md#1">为何看不到恶有恶报？阎王让他经历三世明白因果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/19/n14205794.md#1">【历史的瞬间】荒野就是文明──黄石公园</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/20/n14206685.md#1">跟我学唐诗（11A）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/23/n14209226.md#1">张僧繇的凹凸技法——《雪山红树图》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/25/n14210184.md#1">【未解之谜】以毒攻毒？癌症的奇特疗法（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/29/n14213972.md#1">【晚间新闻】全美大抓捕 216名非法移民落网</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/30/n14214658.md#1">【探索时分】中共直21武装直升机被爆哪些信息</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/29/n14213953.md#1">【中国禁闻】李书福受访提六四 俞敏洪直播被封</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/30/n14214498.md#1">分析：彭丽媛若进政治局 至少要到二十一大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/30/n14214591.md#1">跟习座谈1.5小时后 美商界更看衰中国经济</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/30/n14214657.md#1">沈舟：中共空军训练尚未摆脱二战模式</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/30/n14214710.md#1">唐嫣凭《繁花》爆红 活动上与胡歌毗邻而坐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/28/n14213088.md#1">怪兽片《哥吉拉与金刚：新帝国》预算最低</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/29/n14213254.md#1">《哥吉拉与金刚：新帝国》影评：两大怪兽英雄再度携手抗敌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/29/n14214032.md#1">《沃土》海外参展遭中共勒令撤片 王小帅反抗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/29/n14214118.md#1">《浪姐5》选手连番退赛 袁娅维离场传闻引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/28/n14213229.md#1">超级蔬菜球芽甘蓝3技巧降苦味 这样冷冻可天天吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/31/n14215248.md#1">美房租连续降 买房还是租房？哪个更划算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/21/n14207299.md#1">居家空间的收纳设计术：玄关篇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/27/n14212328.md#1">精湛传统厨艺宏扬澳洲 港式点心师傅忆往昔</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/28/n14212848.md#1">搭乘短程航班常犯哪些错误？专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307329.md#1">【百年真相】从资本家到右派 李康年真话代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307614.md#1">【菁英论坛】紧张局势陡升 中东成火药桶？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/17/n12816931.htm">响应麦当劳叔叔 一起洗手趣预防肠病毒</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/21/3/17/n12816931.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/17/n12816931.htm">响应麦当劳叔叔 一起洗手趣预防肠病毒</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/21/3/17/n12816931.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
